# FirstReverb

./: README.md
makespeechbeautiful/: bandpass.m  delay.m  firpmagc.m  firpmfilter.m  main.m  peakfilt.m  reverb.m  tail.m  tailtest.m
makespeechbeautiful/sndfilter/: CMakeLists.txt
makespeechbeautiful/sndfilter/src/: CMakeLists.txt  main.c
schroder/: Schroder.m  allpass12.m  delayfblp1.m  main.m
